examples/test/testpolicy7021.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7021
  namespace: namespace307
spec:
  podSelector:
    matchLabels:
      key18: value43
      key35: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value14
      podSelector:
        matchLabels:
          key49: value19
          key1: value46
          key39: value16
